# rimokun

./: CLAUDE.md  CMakeLists.txt  README.md  mkdocs.yml
.github/workflows/: docs.yml
Config/: GUI.yaml  rimokun.yaml
GUI/: CMakeLists.txt  rimokunControl.cpp
GUI/forms/: AuxControls.ui  MainWindow.ui  ResetControls.ui  ToolChanger.ui  motorstats.ui
GUI/include/: AuxControls.hpp  ContecPanelWindow.hpp  GuiCommand.hpp  GuiCommandJsonAdapter.hpp  GuiCommandYamlAdapter.hpp  GuiMetaTypes.hpp  GuiStateStore.hpp  GuiYamlExtensions.hpp  ITransportWorker.hpp  JoystickPanelWindow.h  JoystickWidget.h  LedIndicator.hpp  MainWindow.hpp  MotorPanelWindow.hpp  MotorStats.hpp  MotorStatsPresenter.hpp  QtLogSink.hpp  ResetControls.hpp  ResetControlsPresenter.hpp  ResponseConsumer.hpp  RimoTransportWorker.hpp  RobotAluBeam.hpp  RobotStatusViewModel.hpp  RobotVisualisation.hpp  SpeedCommandBar.hpp  StyledPopup.hpp  TitleBar.hpp  ToolChanger.hpp  ToolChangerPresenter.hpp  Updater.hpp  test.hpp
GUI/src/: AuxControls.cpp  ContecPanelWindow.cpp  GuiCommandJsonAdapter.cpp  GuiCommandYamlAdapter.cpp  GuiStateStore.cpp  JoystickPanelWindow.cpp  JoystickWidget.cpp  LedIndicator.cpp  MainWindow.cpp  MotorPanelWindow.cpp  MotorStats.cpp  MotorStatsPresenter.cpp  ResetControls.cpp  ResetControlsPresenter.cpp  RimoTransportWorker.cpp  RobotStatusViewModel.cpp  RobotVisualisation.cpp  SpeedCommandBar.cpp  StyledPopup.cpp  TitleBar.cpp  ToolChanger.cpp  ToolChangerPresenter.cpp  Updater.cpp  test.cpp
Server/: CMakeLists.txt
Server/apps/: CMakeLists.txt  RimoServer.cpp  modbusRtuOverTcpExample.cpp  modbusTestRTU.cpp  modbusTestTCP.cpp  motorControlDemo.cpp  rimoServer.cpp  rimoServerDummy.cpp
Server/include/: ArKd2Diagnostics.hpp  ArKd2FullRegisterMap.hpp  ArKd2RegisterMap.hpp  CommandInterface.hpp  Contec.hpp  ControlLoopRunner.hpp  ControlPanel.hpp  ControlPanelCommFactory.hpp  IClock.hpp  IControlPanelComm.hpp  JoystickAxisProcessor.hpp  Machine.hpp  MachineCommandProcessor.hpp  MachineCommandServer.hpp  MachineComponent.hpp  MachineComponentService.hpp  MachineController.hpp  MachineRuntime.hpp  MachineStatusBuilder.hpp  ModbusClient.hpp  Motor.hpp  MotorControl.hpp  MotorRegisterMap.hpp  RobotControlPolicy.hpp  SerialControlPanelComm.hpp  SteadyClockAdapter.hpp  test.hpp
Server/resources/: ArKd2RegisterMap.csv
Server/scripts/: parse_ar_kd2_register_map.py
Server/src/: ArKd2Diagnostics.cpp  ArKd2FullRegisterMap.cpp  ArKd2RegisterMap.cpp  Contec.cpp  ControlLoopRunner.cpp  ControlPanel.cpp  ControlPanelCommFactory.cpp  JoystickAxisProcessor.cpp  Machine.cpp  MachineCommandProcessor.cpp  MachineCommandServer.cpp  MachineComponentService.cpp  MachineController.cpp  MachineRuntime.cpp  MachineStatusBuilder.cpp  Motor.cpp  MotorControl.cpp  RobotControlPolicy.cpp  SerialControlPanelComm.cpp  test.cpp
Utilities/: CMakeLists.txt
Utilities/include/: ClassName.hpp  CommonDefinitions.hpp  Config.hpp  ExceptionUtils.hpp  JsonExtensions.hpp  Logger.hpp  RimoClient.h  RimoClient.hpp  RimoServer.h  RimoServer.hpp  Singleton.hpp  TimingMetrics.hpp  VMotorStats.hpp  YamlExtensions.hpp  logger.hpp
Utilities/src/: CommonDefinitions.cpp  Config.cpp  RimoClient.cpp  RimoServer.cpp  VMotorStats.cpp
Utilities/test/: CMakeLists.txt  foo.cpp
docs/: architecture.md  classes.md  configuration.md  development.md  faq.md  gui.md  index.md  installation.md  interfaces.md  operation.md  quickstart.md  server.md  troubleshooting.md
docs/assets/stylesheets/: extra.css
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/server/: MachineRuntimeIntegrationTests.cpp
tests/unit/: CMakeLists.txt
tests/unit/gui/: GuiCommandJsonAdapterTests.cpp  GuiCommandYamlAdapterTests.cpp  RimoTransportWorkerTests.cpp  RobotStatusViewModelTests.cpp  UpdaterCoordinationTests.cpp
tests/unit/qt/: GuiStateStoreQtTests.cpp  ResetControlsPresenterQtTests.cpp  ToolChangerPresenterQtTests.cpp
tests/unit/scripts/: check_coverage_thresholds.sh
tests/unit/server/: ArKd2DiagnosticsTests.cpp  ArKd2RegisterMapTests.cpp  CommandQueueTests.cpp  ControlLoopRunnerTests.cpp  ControlPanelCommContractTests.cpp  ControlPanelCommFactoryTests.cpp  ControlPanelTests.cpp  MachineCommandProcessorTests.cpp  MachineCommandServerTests.cpp  MachineCommandTests.cpp  MachineComponentServiceTests.cpp  MachineControllerTests.cpp  MachineLoopTests.cpp  MachineMappingTests.cpp  MachineRuntimeTests.cpp  MachineStatusBuilderTests.cpp  ModbusClientTests.cpp  MotorControlTests.cpp  MotorTests.cpp  RobotControlPolicyTests.cpp  SerialControlPanelCommTests.cpp
tests/unit/server/fakes/: FakeClock.hpp  FakeModbus.cpp  FakeModbus.hpp
tests/unit/utilities/: ConfigTests.cpp  JsonExtensionsTests.cpp  VMotorStatsTests.cpp  YamlExtensionsTests.cpp
